<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		iphone_16_pro___2
	 *	@date 		Friday 27th of December 2024 04:33:05 PM
	 *	@title 		Export Kit
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.3.figma
	 *
	 */
	-->
	<ScrollView android:id="@+id/iphone_16_pro___2" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >



			<RelativeLayout android:id="@+id/page_iphone_16_pro___2_ek1"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/_bg__iphone_16_pro___2_ek2"
					android:background="@drawable/_bg__iphone_16_pro___2_ek2_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="402dp"
					android:layout_height="874dp" />


				<RelativeLayout android:id="@+id/frame_1"
					android:layout_marginTop="89dp"
					android:layout_marginStart="26dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>


					<RelativeLayout android:id="@+id/frame_5"
						android:layout_marginTop="16dp"
						android:layout_marginStart="16dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<TextView android:id="@+id/id__safhnajfnjkea"
							android:fontFamily="Inter"
							android:textSize="12sp"
							android:textColor="@color/id__safhnajfnjkea_color"
							android:layout_marginLeft="0dp"
							android:layout_marginTop="0dp"
							android:layout_width="110dp"
							android:layout_height="23dp"
							android:text="@string/id__safhnajfnjkea_string"
							 />


						<RelativeLayout android:id="@+id/frame_7"
							android:layout_marginTop="23dp"
							android:layout_marginStart="0dp"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							>


							<RelativeLayout android:id="@+id/frame_4"
								android:layout_marginTop="0dp"
								android:layout_marginStart="0dp"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								>


								<RelativeLayout android:id="@+id/frame_2"
									android:layout_marginTop="0dp"
									android:layout_marginStart="0dp"
									android:layout_width="wrap_content"
									android:layout_height="wrap_content"
									>

								</RelativeLayout>


								<RelativeLayout android:id="@+id/string_data"
									android:layout_marginTop="0dp"
									android:layout_marginStart="44dp"
									android:layout_width="wrap_content"
									android:layout_height="wrap_content"
									>

									<TextView android:id="@+id/nama_toko"
										android:fontFamily="Inter"
										android:textStyle="bold"
										android:textSize="16sp"
										android:textColor="@color/id__safhnajfnjkea_color"
										android:layout_marginLeft="0dp"
										android:layout_marginTop="2dp"
										android:layout_width="156dp"
										android:layout_height="30dp"
										android:text="@string/nama_toko_string"
										 />

									<TextView android:id="@+id/waktu"
										android:fontFamily="Inter"
										android:textSize="11sp"
										android:textColor="@color/waktu_color"
										android:layout_marginLeft="0dp"
										android:layout_marginTop="21dp"
										android:layout_width="151.5dp"
										android:layout_height="20.5dp"
										android:text="@string/waktu_string"
										 />

								</RelativeLayout>

							</RelativeLayout>


							<RelativeLayout android:id="@+id/frame_12"
								android:layout_marginTop="8.5dp"
								android:layout_marginStart="214dp"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								>

								<TextView android:id="@+id/__rp_900_000"
									android:fontFamily="Inter"
									android:textStyle="bold"
									android:layout_gravity="center_vertical|end"
									android:gravity="end"
									android:textSize="16sp"
									android:textColor="@color/__rp_900_000_color"
									android:layout_marginLeft="-3dp"
									android:layout_marginTop="0dp"
									android:layout_width="116dp"
									android:layout_height="30dp"
									android:text="@string/__rp_900_000_string"
									 />

							</RelativeLayout>

						</RelativeLayout>

						<TextView android:id="@+id/jalan_timah_raya_ii"
							android:fontFamily="Inter"
							android:textSize="12sp"
							android:textColor="@color/id__safhnajfnjkea_color"
							android:layout_marginLeft="0dp"
							android:layout_marginTop="67dp"
							android:layout_width="126dp"
							android:layout_height="23dp"
							android:text="@string/jalan_timah_raya_ii_string"
							 />

					</RelativeLayout>


					<RelativeLayout android:id="@+id/frame_8"
						android:layout_marginTop="116dp"
						android:layout_marginStart="16dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<TextView android:id="@+id/catatan"
							android:fontFamily="Inter"
							android:textStyle="bold"
							android:textSize="12sp"
							android:textColor="@color/id__safhnajfnjkea_color"
							android:layout_marginLeft="0dp"
							android:layout_marginTop="0dp"
							android:layout_width="334dp"
							android:layout_height="23dp"
							android:text="@string/catatan_string"
							 />


						<RelativeLayout android:id="@+id/frame_6"
							android:layout_marginTop="19dp"
							android:layout_marginStart="0dp"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							>

							<TextView android:id="@+id/mantap"
								android:fontFamily="Inter"
								android:textSize="12sp"
								android:textColor="@color/id__safhnajfnjkea_color"
								android:layout_marginLeft="8dp"
								android:layout_marginTop="8dp"
								android:layout_width="318dp"
								android:layout_height="23dp"
								android:text="@string/mantap_string"
								 />

						</RelativeLayout>

					</RelativeLayout>


					<RelativeLayout android:id="@+id/frame_9"
						android:layout_marginTop="184dp"
						android:layout_marginStart="16dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>


						<RelativeLayout android:id="@+id/frame_10"
							android:layout_marginTop="16dp"
							android:layout_marginStart="172dp"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							>

							<TextView android:id="@+id/batalkan"
								android:fontFamily="Inter"
								android:textStyle="bold"
								android:textSize="12sp"
								android:textColor="@color/batalkan_color"
								android:layout_marginLeft="10dp"
								android:layout_marginTop="10dp"
								android:layout_width="69dp"
								android:layout_height="23dp"
								android:text="@string/batalkan_string"
								 />

						</RelativeLayout>


						<RelativeLayout android:id="@+id/frame_11"
							android:layout_marginTop="16dp"
							android:layout_marginStart="252dp"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							>

							<TextView android:id="@+id/simpan"
								android:fontFamily="Inter"
								android:textStyle="bold"
								android:textSize="12sp"
								android:textColor="@color/simpan_color"
								android:layout_marginLeft="10dp"
								android:layout_marginTop="10dp"
								android:layout_width="62dp"
								android:layout_height="23dp"
								android:text="@string/simpan_string"
								 />

						</RelativeLayout>

					</RelativeLayout>

				</RelativeLayout>

			</RelativeLayout>
		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>